Bug 575726 - app button sits two pixels too high on the window frame. r=gavin
UltraBlame original commit: e0c61d38cb26bb748ae4cd67694ccbc957b97b79

--- a/browser/themes/winstripe/browser/browser-aero.css
+++ b/browser/themes/winstripe/browser/browser-aero.css
@@ -248,6 +248,33 @@ top
 main
 -
 window
+[
+sizemode
+=
+"
+normal
+"
+]
+[
+chromemargin
+^
+=
+"
+0
+"
+]
+{
+margin
+-
+top
+:
+2px
+;
+}
+#
+main
+-
+window
 :
 not
 (
